--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,42 +1,46 @@
 {
     // See https://go.microsoft.com/fwlink/?LinkId=733558
     // for the documentation about the tasks.json format
-    "version": "2.0.0",
+    "version": "0.1.0",
     "key": "ctrl+shift+b",
+    "taskName": "runInBash",
+    "isShellCommand": true,
+    "showOutput": "always",
+    "command":"bash",
+    "args": [
+        "-c"
+    ],
+    "windows": {
+        "command": "cmd",
+        "args": [
+            "-C"
+        ]
+    },
     "tasks": [
         {
+            
             "taskName": "parseGTX",
-            //"isBuildCommand": true,
+            "isBuildCommand": true,
             "command": "java",
-            "type": "shell",
-            "args": ["-cp","${workspaceRoot}/GTX-Parser/bin/","Main","-o","${file}"],
-            "windows": {
-                "args": ["-cp","${workspaceRoot}\\GTX-Parser\\bin","Main","-o","${file}"]
+            "args": ["-cp","${workspaceRoot}/GTX-Parser/bin","Main","-o","${file}"],
+            "windows":{
+                // combined task
+                "args": ["-cp","${workspaceRoot}\\GTX-Parser\\bin","Main","-o","${file}","&&","code","${workspaceRoot}\\tex\\${fileBasenameNoExtension}.tex"]
             }
         },
         {
-            "taskName": "openResTex",
-            "type": "shell",
-            "isBuildCommand": true,
-            "command":"code",
-            "args": ["${workspaceRoot}/tex/${fileBasenameNoExtension}.tex"],
-            "windows": {
-                "args": ["${workspaceRoot}\\tex\\${fileBasenameNoExtension}.tex"]
-            },
-            "dependsOn": [
-                "parseGTX"
-            ],
-            "problemMatcher": []
+            "taskName": "openTex",
+            "command": "code",
+            //"isBuildCommand": true,
+            "args": [
+                "${workspaceRoot}/tex/${fileBasenameNoExtension}.tex"
+            ]
         },
         {
             "taskName": "Recompile Java-Parser",
-            //"isBuildCommand": true,
             "command": "javac",
-            "type": "shell",
-            "args": ["-g","-d","${workspaceRoot}/GTX-Parser/bin","-sourcepath","${workspaceRoot}/GTX-Parser/src","${workspaceRoot}/GTX-Parser/src/Main.java"],
-            "windows": {
-                "args": ["-g","-d","${workspaceRoot}\\GTX-Parser\\bin","-sourcepath","${workspaceRoot}\\GTX-Parser\\src","${workspaceRoot}\\GTX-Parser\\src\\Main.java"]
-            }           
+            "isBuildCommand": true,
+            "args": ["-g","-d","${workspaceRoot}/GTX-Parser/bin","-sourcepath","${workspaceRoot}/GTX-Parser/src","${workspaceRoot}/GTX-Parser/src/Main.java"]
         }
     ]
 }
